# magnetometer-calibrate

./: CMakeLists.txt  README.md
include/: magnet.h
src/: magnet.c
